--- a/colab_git_test.ipynb
+++ b/colab_git_test.ipynb
@@ -33,7 +33,7 @@
         "id": "2X6iDo8hgdJ7"
       },
       "source": [
-        ""
+        "colab test"
       ],
       "execution_count": null,
       "outputs": []
