Colaboratory를 통해 생성됨

--- a/colab_git_test.ipynb
+++ b/colab_git_test.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "colab_git_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvFXFNhRmowpCU4y+nFzh0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +29,386 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2X6iDo8hgdJ7"
+        "id": "2X6iDo8hgdJ7",
+        "outputId": "4aa922d0-2baa-4ff7-81b1-9e8ea538bb13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "colab test"
+        "print('colab test')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "colab test\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OhaaSG1BG-0-"
+      },
+      "source": [
+        "# 모델을 loss는 평가하는 지표\n",
+        "# (예측-결과)^2 의 평균\n",
+        "# 0에 가까울수록 정확함.\n",
+        "# github csv url : https://raw.githubusercontent.com/blackdew/tensorflow1/master/csv/lemonade.csv"
+      ],
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MfSNYE9BHjwe"
+      },
+      "source": [
+        "# 라이브러리 사용\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gwn0Ona7IOru",
+        "outputId": "5b070b0a-f821-4d9e-c976-758002d064ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "# 데이터 준비\n",
+        "파일경로 = 'https://raw.githubusercontent.com/blackdew/tensorflow1/master/csv/lemonade.csv'\n",
+        "데이터 = pd.read_csv(파일경로)\n",
+        "데이터.head()"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>온도</th>\n",
+              "      <th>판매량</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>20</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>21</td>\n",
+              "      <td>42</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>22</td>\n",
+              "      <td>44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>23</td>\n",
+              "      <td>46</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>24</td>\n",
+              "      <td>48</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   온도  판매량\n",
+              "0  20   40\n",
+              "1  21   42\n",
+              "2  22   44\n",
+              "3  23   46\n",
+              "4  24   48"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1sOO3KrKJLGl",
+        "outputId": "b270c805-77a8-4f2c-caad-adeb395c2b99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 종속변수, 독립변수\n",
+        "독립 = 데이터[['온도']]\n",
+        "종속 = 데이터[['판매량']]\n",
+        "print(독립.shape, 종속.shape)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(6, 1) (6, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E3LP-F_NIPgg"
+      },
+      "source": [
+        "# 모델을 만듭니다.\n",
+        "X = tf.keras.layers.Input(shape=[1])\n",
+        "Y = tf.keras.layers.Dense(1)(X)\n",
+        "model = tf.keras.models.Model(X, Y)\n",
+        "model.compile(loss='mse')"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_RBDYJ0EIQZu",
+        "outputId": "4ce8dec5-5579-4aba-ba60-e8fd032b38ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 모델을 학습합니다.\n",
+        "model.fit(독립, 종속, epochs=10)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "1/1 [==============================] - 0s 6ms/step - loss: 1.3914e-04\n",
+            "Epoch 2/10\n",
+            "1/1 [==============================] - 0s 15ms/step - loss: 1.3924e-04\n",
+            "Epoch 3/10\n",
+            "1/1 [==============================] - 0s 6ms/step - loss: 1.3936e-04\n",
+            "Epoch 4/10\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 1.3935e-04\n",
+            "Epoch 5/10\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 1.3944e-04\n",
+            "Epoch 6/10\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 1.3940e-04\n",
+            "Epoch 7/10\n",
+            "1/1 [==============================] - 0s 4ms/step - loss: 1.3939e-04\n",
+            "Epoch 8/10\n",
+            "1/1 [==============================] - 0s 4ms/step - loss: 1.3949e-04\n",
+            "Epoch 9/10\n",
+            "1/1 [==============================] - 0s 5ms/step - loss: 1.3959e-04\n",
+            "Epoch 10/10\n",
+            "1/1 [==============================] - 0s 6ms/step - loss: 1.3953e-04\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7ff0877c3dd0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "10GN86WLJ18v",
+        "outputId": "86e18cdc-0d76-48d5-9b3e-7a55261c8142",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 모델을 이용합니다.\n",
+        "model.predict(독립)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[40.011635],\n",
+              "       [42.011703],\n",
+              "       [44.011772],\n",
+              "       [46.01184 ],\n",
+              "       [48.011913],\n",
+              "       [50.011982]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sFbF7qCpJ8mX",
+        "outputId": "34432330-6c8a-4181-aa54-77e20c980f32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "source": [
+        "종속"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>판매량</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>42</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>46</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>48</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>50</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   판매량\n",
+              "0   40\n",
+              "1   42\n",
+              "2   44\n",
+              "3   46\n",
+              "4   48\n",
+              "5   50"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oKKNNxqvKavu",
+        "outputId": "93e41c6d-12b9-4804-e4ce-41ca86a4d4ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.predict([[15]])"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[30.011293]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
     }
   ]
 }
