--- a/3_1.ipynb
+++ b/3_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "3-1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvFXFNhRmowpCU4y+nFzh0",
+      "authorship_tag": "ABX9TyN2IXj3h1QVyXKHm6eoZbJm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,131 @@
       "cell_type": "code",
       "metadata": {
         "id": "XfBvxPnE5dM9"
+      },
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.base import BaseEstimator\n",
+        "\n",
+        "class MyDummyClassifier(BaseEstimator):\n",
+        "  def fit(self, X , y=None):\n",
+        "    pass\n",
+        "  \n",
+        "  def predict(self, X):\n",
+        "    pred = np.zeros( ( X.shape[0], 1))\n",
+        "    for i in range (X.shape[0]) :\n",
+        "      if X['Sex'].iloc[i] == 1:\n",
+        "        pred[i] = 0\n",
+        "      else :\n",
+        "        pred[i] = 1\n",
+        "    return pred\n"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DRwaDANs6fXp"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "def fillna(df):\n",
+        "  df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+        "  df['Cabin'].fillna('N', inplace=True)\n",
+        "  df['Embarked'].fillna('N', inplace=True)\n",
+        "  df['Fare'].fillna(0, inplace=True)\n",
+        "  return df\n",
+        "\n",
+        "def drop_features(df):\n",
+        "  df.drop(['PassengerId', 'Name', 'Ticket'], axis=1, inplace=True)\n",
+        "  return df\n",
+        "\n",
+        "def format_features(df):\n",
+        "  df['Cabin'] = df['Cabin'].str[:1]\n",
+        "  features = ['Cabin', 'Sex', 'Embarked']\n",
+        "  for feature in features:\n",
+        "    le = LabelEncoder()\n",
+        "    le = le.fit(df[feature])\n",
+        "    df[feature] = le.transform(df[feature])\n",
+        "  return df\n",
+        "\n",
+        "def transform_features(df):\n",
+        "  df = fillna(df)\n",
+        "  df = drop_features(df)\n",
+        "  df = format_features(df)\n",
+        "  return df"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PqnUTXoO6xY3",
+        "outputId": "9c67fecc-8103-4a74-c1d2-87345fa87f7d"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "titanic_df = pd.read_csv('https://raw.githubusercontent.com/rinato/ai_project/master/train.csv')\n",
+        "y_titanic_df = titanic_df['Survived']\n",
+        "X_titanic_df = titanic_df.drop('Survived', axis=1)\n",
+        "X_titanic_df = transform_features(X_titanic_df)\n",
+        "X_train, X_test, y_train, y_test=train_test_split(X_titanic_df, y_titanic_df, test_size=0.2, random_state=0)\n",
+        "\n",
+        "myclf = MyDummyClassifier()\n",
+        "myclf.fit(X_train, y_train)\n",
+        "\n",
+        "mypredictions = myclf.predict(X_test)\n",
+        "print('Dummy Classifier의 정확도 : {0:.4f}'.format(accuracy_score(y_test, mypredictions)))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Dummy Classifier의 정확도 : 0.7877\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tUJJGRQU7pvv"
+      },
+      "source": [
+        "from sklearn.datasets import load_digits"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SvV3BFlD8P-A"
+      },
+      "source": [
+        "#.."
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X-Dd4wrE8WEQ"
       },
       "source": [
         ""
